Tue May 29 00:38:18 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.c, gui/gdmlogin.c: ignore .rpmorig files as well,
	  and some cosmetic code changes

Mon May 28 02:24:43 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c: Fixed a stupid mistake cased by a missed warning,
	  not really that crucial since the default config has no failsafe
	  X servers, because AFAIK, no such beast exists yet

	* daemon/gdm.c, daemon/misc.[ch], daemon/slave.c:  In case the
	  language doesn't have '_' as the third character it's a communist
	  and must be executed.  Or perhaps we should just read the alias
	  file and translate it.  This should really only happen if sysadmin
	  and screwed up or the user has a very old setting from pre 2.2 days

Sun May 27 23:39:19 2001  George Lebl <jirka@5z.com>

	* config/PostSession, config/PreSession: Don't change utmp since
	  there is no "terminal", debian bug #90981

Thu May 24 16:05:32 2001  George Lebl <jirka@5z.com>

	* Release 2.2.2

Thu May 24 15:32:54 2001  George Lebl <jirka@5z.com>

	* configure.in, gdm-restart.in, Makefile.am: a script to restart
	  the gdm daemon, in sbin for root pleasure only

	* gdm.spec.in: redo the file list to be hopefully sane

	* daemon/gdm.c: actually read in GdmConfigurator

	* gui/gdmconfig.c: show help fromt he help button

	* gui/gdmlogin.c, gui/gdmwm.[ch]: add some short-circuit functions
	  for window moving, bypassing the window management foo.  This makes
	  quiver nice again.

Thu May 24 13:22:49 2001  George Lebl <jirka@5z.com>

	* configure.in: add ms (Bahasa Melayu), the official Microsoft
	  locale, for translations by Khairulanuar Abd Majid <khai@jaring.my>

Thu May 24 12:55:05 2001  George Lebl <jirka@5z.com>

	* configure.in, docs/Makefile.am, omf-install/Makefile.am,
	  docs/sgmldocs.make, docs/gdmconfig/C/Makefile.am, Makefile.am:
	  Set up the documentation/omf build stuff.

	* docs/gdmconfig/C/gdmconfig.sgml: fix version to say 2.2.2 and this