@@ -34,6 +34,8 @@ dansk		da_DK.ISO-8859-1
 deutsch		de_DE.ISO-8859-1
 dutch		nl_NL.ISO-8859-1
 english		en.ISO-8859-1
+english.us	en_US.ISO-8859-1
+english.gb	en_GB.ISO-8859-1
 finnish         fi_FI.ISO-8859-1
 french		fr_FR.ISO-8859-1
 german		de_DE.ISO-8859-1
