@@ -1,3 +1,14 @@
+Tue May 29 15:47:16 2001  George Lebl <jirka@5z.com>
+
+	* config/locale.alias: Add british/american english language choices
+
+	* gui/gdmlanguages.c: Add the POSIX/C locale if it doesn't exist
+
+	* gui/gdmlogin.c: Make the minimize button like an actual minimize
+	  button instead of an arrow.  It's a black line in the bottom of the
+	  button.  Also turned on the relief again as it looks better like
+	  that now I think.
+
 Tue May 29 00:38:18 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmconfig.c, gui/gdmlogin.c: ignore .rpmorig files as well,
